# TORCphysics

./: .readthedocs.yaml  README  README.md  mkdocs.yml  pyproject.toml
TORCphysics/: __init__.py  circuit.csv  environment.csv  enzymes.csv  genome.csv  mkal.params  object.txt  output.npy  sites.csv  supercoiling.txt
TORCphysics/Analysis/: Analysis.py  analysis.py  plot_gsigma.py  plot_outputs.py  plot_signals.py
TORCphysics/Examples/: Example_1.ipynb  Example_2.ipynb  Example_3.ipynb  Example_4.ipynb  circuit_circular.csv  environment_gyrase.csv  environment_topoI.csv  environment_torcphys.csv  genearc_example.py  single_gene_example.py  single_gene_site.csv  twist_example.py
TORCphysics/backup/: main.py
TORCphysics/docs/: README.md  api.md  api.rst  conf.py  index.md  index.rst  requirements.txt  usage.md  usage.rst
TORCphysics/response_function/: Pleu500_14bp.fasta
TORCphysics/src/: __init__.py  analysis.py  binding_model.py  circuit.py  effect_model.py  environment.py  enzyme.py  event.py  log.py  main.py  mechanical_model.py  models_workflow.py  params.py  site.py  sys1_environment_df.csv  sys1_environment_output.csv  sys1_enzymes_output.csv  sys1_sites_output.csv  unbinding_model.py  utils.py  visualization.py
TORCphysics/tests/: circuit.csv  environment.csv  enzymes.csv  enzymes_df.csv  sites.csv  sites_df.csv  sys1_environment_df.csv  sys1_environment_output.csv  sys1_enzymes_df.csv  sys1_enzymes_output.csv  (+18 more)
v1/: circuit.csv  enviroment.csv  global_sigma.txt  main.py  objects-output.csv  objects.csv  output  positions.txt  statistical_model.py
(+3116 files in other folders)
