[tool.poetry]
name = "torcphysics"
version = "0.0.1"
description = "A nice model"
authors = ["Victor Velasco"]
license = "GPv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
